--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -26,7 +26,8 @@ pre {
 }
 
 table td {
-  border-style: solid;
-  border-color: black;
-  border-width: 1px;
+  border: 1px solid black;
+  // border-style: solid;
+  // border-color: black;
+  // border-width: 1px;
 }
