--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,2 +1,43 @@
-<h1>Groups#show</h1>
-<p>Find me in app/views/groups/show.html.erb</p>
+<h1 class="name"><%= @group.name %></h1>
+
+<% @group.users.each do |user| %>
+<% if member_of? user: user, group: @group %>
+<table>
+<thead>
+  <tr>
+    <th colspan="2"><%= user.name %></th>
+  </tr>
+</thead>
+
+<tbody>
+  <tr>
+    <th>Description</th>
+    <th>Amount</th>
+  </tr>
+    <% @group.payments.where(user: user).each do |payment| %>
+    <tr>
+      <td><%= payment.description.capitalize %></td>
+      <td>$<%= payment.amount %></td>
+    </tr>
+  </tbody>
+  <% end %>
+  <tfoot>
+    <tr>
+      <td>TOTAL</td>
+      <td>$<%= user.balance(group: @group) %></td>
+    </tr>
+  </tfoot><br>
+  </table><br>
+    <% if current_user == user %>
+      <%= form_for [user, user.payments.new] do |f| %>
+        <%= f.label :description %>
+        <%= f.text_field :description %><br>
+        <%= f.label :amount %>
+        <%= f.text_field :amount %><br>
+        <%= f.hidden_field :group_id, value: @group.id %>
+        <%= f.submit %>
+      <% end %>
+    <% end %>
+<% end %>
+<% end %>
+
