--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -25,6 +25,10 @@ pre {
   display: inline;
 }
 
+thead {
+  border: 2px solid black;
+}
+
 table td {
   border: 1px solid black;
   // border-style: solid;
