--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,7 +5,8 @@
     <li><%= link_to "Contact", contact_path %></li>
     <% unless logged_in? %>
     <li><%= link_to "Signup", signup_path %></li>
-    <li><%= link_to "Login", login_path %></li>
+    <li><%= link_to 'Login', '/auth/github' %></li>
+    
     <% else %>
     <li><%= link_to "Groups", groups_path %></li>
     <li><%= link_to "Users", users_path %></li>
