--- a/app/views/static_pages/login.html.erb
+++ b/app/views/static_pages/login.html.erb
@@ -1,10 +1,9 @@
 Here we set a cookie. 
 We can cheat and set the cookie to whatever the params[:login_id] gets
-So /login?login_id=1 would log you in as user_id 1:::::
+So /login?id=1 would log you in as user_id 1:::::
 
-?login_id=<%= params[:id] %>
+?id=<%= params[:id] %>
 
-<% session.delete(:login_id) %>
 <% session.delete(:id) if params[:id].nil? %>
 <% session[:id] = params[:id] %>
 
