--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,7 +5,8 @@
     <li><%= link_to "Contact", contact_path %></li>
     <% unless logged_in? %>
     <li><%= link_to "Signup", signup_path %></li>
-    <li><%= link_to 'Login', '/auth/github' %></li>
+    <li><%#= link_to "Login", login_path %></li>
+    <li><%= link_to 'Github', github_path %></li>
     
     <% else %>
     <li><%= link_to "Groups", groups_path %></li>
@@ -13,5 +14,7 @@
     <li><%= link_to "Logout", login_path if logged_in? %></li>
     <li><%= link_to current_user.nickname, current_user if logged_in? %></li>
     <% end %>
+    
+    <% session.delete(:id) %>
   </ul>
 </nav>
