--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,17 +4,14 @@
     <li><%= link_to "About", about_path %></li>
     <li><%= link_to "Contact", contact_path %></li>
     <% unless logged_in? %>
-    <li><%= link_to "Signup", signup_path %></li>
-    <li><%#= link_to "Login", login_path %></li>
-    <li><%= link_to 'Github', github_path %></li>
-    
+    <li><%= link_to 'Login', '/auth/github' %></li>
     <% else %>
     <li><%= link_to "Groups", groups_path %></li>
     <li><%= link_to "Users", users_path %></li>
-    <li><%= link_to "Logout", login_path if logged_in? %></li>
+    <li><%= link_to "Logout", logout_path %></li>
     <li><%= link_to current_user.nickname, current_user if logged_in? %></li>
     <% end %>
     
-    <% session.delete(:id) %>
+    <%# session.delete(:id) %>
   </ul>
 </nav>
