yet another commit

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><%= link_to "Home", welcome_path %></li>
+    <li><%= link_to "Welcome", welcome_path %></li>
     <li><%= link_to "About", about_path %></li>
     <li><%= link_to "Contact", contact_path %></li>
     <% unless logged_in? %>
